# tinted-shell

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  base16-shell.plugin.bash  base16-shell.plugin.zsh  colortest  profile_helper.fish  profile_helper.sh
.github/: CODEOWNERS
fish/: base16-0x96f.fish  base16-3024.fish  base16-apathy.fish  base16-apprentice.fish  base16-ascendancy.fish  base16-ashes.fish  base16-atelier-cave-light.fish  base16-atelier-cave.fish  base16-atelier-dune-light.fish  base16-atelier-dune.fish  base16-atelier-estuary-light.fish  base16-atelier-estuary.fish  base16-atelier-forest-light.fish  base16-atelier-forest.fish  base16-atelier-heath-light.fish  base16-atelier-heath.fish  base16-atelier-lakeside-light.fish  base16-atelier-lakeside.fish  base16-atelier-plateau-light.fish  base16-atelier-plateau.fish  base16-atelier-savanna-light.fish  base16-atelier-savanna.fish  base16-atelier-seaside-light.fish  base16-atelier-seaside.fish  base16-atelier-sulphurpool-light.fish  base16-atelier-sulphurpool.fish  base16-atlas.fish  base16-ayu-dark.fish  base16-ayu-light.fish  base16-ayu-mirage.fish  base16-aztec.fish  base16-bespin.fish  base16-black-metal-bathory.fish  base16-black-metal-burzum.fish  base16-black-metal-dark-funeral.fish  base16-black-metal-gorgoroth.fish  base16-black-metal-immortal.fish  base16-black-metal-khold.fish  base16-black-metal-marduk.fish  base16-black-metal-mayhem.fish  (+463 more)
hooks/: base16-delta.sh  base16-fzf.fish  base16-fzf.sh  base16-hexchat.fish  base16-hexchat.sh  base16-jqp.sh  base16-sublime-merge.fish  (+6 more)
(+491 files in other folders)
